--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.20.1",
+    "crypto": "1.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
-    "puppeteer": "^16.0.0"
+    "jsonwebtoken": "8.5.1",
+    "jspdf": "2.5.1",
+    "nodemon": "2.0.20",
+    "pdfkit": "0.13.0",
+    "taiko": "1.3.4"
   }
 }
